apps/hello-world/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
